--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "cSpell.words": ["equinor"]
+    "cSpell.words": ["equinor"],
+    "eslint.run": "onSave",
+    "editor.formatOnSave": true
 }
