--- a/pipelines/frontend-build.yml
+++ b/pipelines/frontend-build.yml
@@ -9,7 +9,7 @@ resources:
         - repository: templates
           type: github
           name: equinor/lighthouse-infra
-          endpoint: 'equinor (2)'
+          endpoint: 'equinor'
           ref: feature/lighthouse-client-web-sandbox
 
 # Global variables for the pipeline
