--- a/pipelines/frontend-build.yml
+++ b/pipelines/frontend-build.yml
@@ -49,7 +49,7 @@ stages:
     - stage: dev
       displayName: 'Deploy to dev'
       dependsOn: 'build'
-      condition: succeeded() # should be  and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+      condition: succeeded() # should be  and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
       variables:
           envName: 'dev'
           envLabel: 'non-prod'
@@ -57,7 +57,6 @@ stages:
           envGroupName: '$(globalPrefix)-$(fullAppName)-${{ variables.envName }}'
           serviceConnection: '${{ variables.nonProdServiceConnection }}'
           containerRegistry: '${{ variables.containerRegistryName }}'
-          appName: '$(appName)'
 
       jobs:
           - template: /src/resources/web-client/jobs/client-deploy.yml@templates
@@ -70,6 +69,6 @@ stages:
                 envGroup: '${{ variables.envGroupName }}'
                 repository: '${{ variables.repositoryName }}'
                 containerRegistry: '${{ variables.containerRegistry }}'
-                appName: '${{ variables.appName }}'
+                appName: '$(appName)'
 
 
