--- a/.docker/nginx/conf.d/default.conf
+++ b/.docker/nginx/conf.d/default.conf
@@ -1,8 +1,8 @@
 server {
-    listen              5000;
-    listen              [::]:5000;
+    listen              80;
     server_name         Lighthouse;
     absolute_redirect   off;
+    server_tokens off;
     
 
     # index.html fallback
