added back  listen              [::]:80;     server_name         localhost;     absolute_redirect   off;

--- a/.docker/nginx/conf.d/default.conf
+++ b/.docker/nginx/conf.d/default.conf
@@ -1,8 +1,8 @@
 server {
     listen              80;
-    server_name         Lighthouse;
+    listen              [::]:80;
+    server_name         localhost;
     absolute_redirect   off;
-    server_tokens off;
     
 
     # index.html fallback
