moved root in nginx and added docker build srcipt

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint-strict": "eslint --ext .js,.jsx,.ts,.tsx src --color --max-warnings=0",
     "test": "jest",
     "test-watch": "npm ci & jest --watchAll",
-    "test-coverage": "npm ci & jest --coverage"
+    "test-coverage": "npm ci & jest --coverage",
+    "docker-build": "docker build -f ./.docker/Dockerfile -t lighthouse:dev ."
   },
   "dependencies": {
     "@equinor/eds-core-react": "^0.13.1",
