--- a/pipelines/frontend-build.yml
+++ b/pipelines/frontend-build.yml
@@ -49,7 +49,7 @@ stages:
     - stage: dev
       displayName: 'Deploy to dev'
       dependsOn: 'build'
-      condition: succeeded() # should be  and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+      condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/dev'))
       variables:
           envName: 'dev'
           envLabel: 'non-prod'
