--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@azure/app-configuration": "^1.3.0",
+    "@azure/msal-browser": "^2.18.0",
     "@equinor/eds-core-react": "^0.14.0",
     "@equinor/eds-icons": "^0.7.0",
     "@equinor/eds-tokens": "^0.7.0",
@@ -32,7 +33,7 @@
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
-    "@types/node": "^16.10.2",
+    "@types/node": "^16.10.3",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.0",
