--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@equinor/eds-core-react": "^0.14.0",
     "@equinor/eds-icons": "^0.7.0",
     "@equinor/eds-tokens": "^0.7.0",
+    "@microsoft/microsoft-graph-types": "^2.7.0",
     "@types/styled-components": "^5.1.14",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
