--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "@types/styled-components": "^5.1.14",
     "lodash": "^4.17.21",
+    "powerbi-client": "^2.18.5",
+    "powerbi-client-react": "^1.3.3",
+    "powerbi-report-authoring": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -40,10 +43,12 @@
     "@types/react-router-dom": "^5.3.0",
     "@types/webpack": "^5.28.0",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.4.0",
     "eslint": "^7.32.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.4.1",
+    "style-loader": "^3.3.0",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
