--- a/package.json
+++ b/package.json
@@ -23,9 +23,15 @@
     "@equinor/eds-core-react": "^0.14.0",
     "@equinor/eds-icons": "^0.7.0",
     "@equinor/eds-tokens": "^0.7.0",
+    "@equinor/fusion": "^3.3.0",
+    "@equinor/fusion-react-filter": "^1.1.10",
+    "@equinor/fusion-react-hanging-garden": "^1.6.9",
+    "@equinor/fusion-react-styles": "^0.3.5",
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "@types/styled-components": "^5.1.14",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "npm": "^8.0.0",
     "powerbi-client": "^2.18.5",
     "powerbi-client-react": "^1.3.3",
     "powerbi-report-authoring": "^1.1.1",
