--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,17 +13,18 @@
         "sourceMap": false,
         "paths": {
             "@equinor/authentication": ["./packages/authentication"],
-            "@equinor/httpClient": ["./packages/httpClient"],
+            "@equinor/http-client": ["./packages/httpClient"],
             "@equinor/lighthouse-core": ["./packages/core"],
             "@equinor/lighthouse-hooks": ["./packages/hooks"],
             "@equinor/lighthouse-components": ["./packages/components"],
+            "@equinor/lighthouse-conf": ["./packages/configuration"],
             "@equinor/lighthouse-util": ["./packages/util"],
             "@equinor/lighthouse-typeGuard": ["./packages/typeGuard"]
         }
     },
     "compileOnSave": true,
     "exclude": ["node_modules"],
-    "include": ["./src", "packages/components/Garden", "packages/components/NavigationView/TreeMoc.ts"],
+    "include": ["./src", "src/components/Garden", "packages/components/NavigationView/TreeMoc.ts"],
     "typedocOptions": {
         "entryPoints": ["src/index.ts"],
         "out": "docs"
