--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-router-dom": "^5.3.0",
     "@types/webpack": "^5.28.0",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
     "eslint": "^7.32.0",
     "file-loader": "^6.2.0",
@@ -58,6 +59,7 @@
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.1"
