--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@equinor/eds-tokens": "^0.7.0",
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "@types/styled-components": "^5.1.14",
+    "frappe-gantt-react": "^0.2.2",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "npm": "^8.0.0",
@@ -51,12 +52,14 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.4.1",
+    "sass": "^1.43.2",
+    "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
     "url-loader": "^4.1.1",
-    "webpack": "^5.52.1",
+    "webpack": "^5.59.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.1"
   }
