--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
+    "react-table": "^7.7.0",
     "styled-components": "^5.3.1",
     "ts-node": "^10.2.1",
     "typesafe-actions": "^5.1.0"
@@ -44,6 +45,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.0",
+    "@types/react-table": "^7.7.7",
     "@types/webpack": "^5.28.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
