--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@azure/app-configuration": "^1.3.0",
     "@azure/msal-browser": "^2.18.0",
+    "@dbeining/react-atom": "^4.1.21",
     "@equinor/eds-core-react": "^0.14.0",
     "@equinor/eds-icons": "^0.7.0",
     "@equinor/eds-tokens": "^0.7.0",
