--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@equinor/eds-tokens": "^0.7.0",
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "@types/styled-components": "^5.1.14",
+    "apexcharts": "^3.29.0",
     "frappe-gantt-react": "^0.2.2",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
@@ -34,6 +35,7 @@
     "powerbi-client-react": "^1.3.3",
     "powerbi-report-authoring": "^1.1.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-table": "^7.7.0",
@@ -52,6 +54,8 @@
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.4.1",
