--- a/package.json
+++ b/package.json
@@ -1,73 +1,3 @@
-{
-  "name": "project-lighthouse",
-  "version": "1.0.0",
-  "description": "Project Lighthouse ProCoSys Client",
-  "main": "Index.ts",
-  "author": "ProCoSys Team",
-  "license": "MIT",
-  "private": true,
-  "scripts": {
-    "start": "webpack serve --mode development --env development --open --hot",
-    "build": "webpack",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
-    "lint-fix": "eslint --ext .js,.jsx,.ts,.tsx src --color --fix",
-    "lint-strict": "eslint --ext .js,.jsx,.ts,.tsx src --color --max-warnings=0",
-    "test": "jest",
-    "test-watch": "yarn  ci & jest --watchAll",
-    "test-coverage": "yarn ci & jest --coverage",
-    "docker-build": "docker build -f ./.docker/Dockerfile -t lighthouse:dev ."
-  },
-  "dependencies": {
-    "@azure/app-configuration": "^1.3.0",
-    "@azure/msal-browser": "^2.18.0",
-    "@dbeining/react-atom": "^4.1.21",
-    "@equinor/eds-core-react": "^0.14.0",
-    "@equinor/eds-icons": "^0.7.0",
-    "@equinor/eds-tokens": "^0.7.0",
-    "@microsoft/microsoft-graph-types": "^2.7.0",
-    "@types/styled-components": "^5.1.14",
-    "apexcharts": "^3.29.0",
-    "frappe-gantt-react": "^0.2.2",
-    "install": "^0.13.0",
-    "lodash": "^4.17.21",
-    "npm": "^8.0.0",
-    "powerbi-client": "^2.18.5",
-    "powerbi-client-react": "^1.3.3",
-    "powerbi-report-authoring": "^1.1.1",
-    "react": "^17.0.2",
-    "react-apexcharts": "^1.3.9",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-table": "^7.7.0",
-    "styled-components": "^5.3.1",
-    "ts-node": "^10.2.1",
-    "typesafe-actions": "^5.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "^16.10.3",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.3.0",
-    "@types/react-table": "^7.7.7",
-    "@types/webpack": "^5.28.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.4.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "prettier": "^2.4.1",
-    "sass": "^1.43.2",
-    "sass-loader": "^12.2.0",
-    "style-loader": "^3.3.0",
-    "terser-webpack-plugin": "^5.2.4",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.4.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.59.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.1"
-  }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:97223804a184f356927dd7ca2106ae72de31e22393a02c194fa08f96a7a94416
+size 2618
