--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,3 @@
-{
-    "compilerOptions": {
-        "strict": true,
-        "jsx": "react-jsx",
-        "target": "es6",
-        "outDir": "dist",
-        "skipLibCheck": true,
-        "module": "commonjs",
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "noImplicitAny": false,
-        "types": ["node"],
-        "sourceMap": false,
-        "paths": {
-            "@equinor/authentication": ["./packages/authentication"],
-            "@equinor/http-client": ["./packages/httpClient"],
-            "@equinor/lighthouse-core": ["./packages/core"],
-            "@equinor/lighthouse-hooks": ["./packages/hooks"],
-            "@equinor/lighthouse-components": ["./packages/components"],
-            "@equinor/lighthouse-conf": ["./packages/configuration"],
-            "@equinor/lighthouse-util": ["./packages/util"],
-            "@equinor/lighthouse-typeGuard": ["./packages/typeGuard"]
-        }
-    },
-    "compileOnSave": true,
-    "exclude": ["node_modules"],
-    "include": ["./src", "src/components/Garden", "packages/components/NavigationView/TreeMoc.ts"],
-    "typedocOptions": {
-        "entryPoints": ["src/index.ts"],
-        "out": "docs"
-    }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:ddaa5e5a878e9c29febb0bca8bc62108066f1b706e92062b56257f3229a84b90
+size 1209
