--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
+    "typescript-register": "^1.1.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.59.0",
     "webpack-cli": "^4.8.0",
