--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint-fix": "eslint --ext .js,.jsx,.ts,.tsx src --color --fix",
     "lint-strict": "eslint --ext .js,.jsx,.ts,.tsx src --color --max-warnings=0",
     "test": "jest",
+    "format": "prettier --config ./.prettierrc --write ./src/**",
     "test-watch": "yarn  ci & jest --watchAll",
     "test-coverage": "yarn ci & jest --coverage",
     "docker-build": "docker build -f ./.docker/Dockerfile -t lighthouse:dev ."
@@ -24,6 +25,7 @@
     "@equinor/eds-core-react": "^0.14.2",
     "@equinor/eds-icons": "^0.7.0",
     "@equinor/eds-tokens": "^0.7.0",
+    "@equinor/fusion-components": "^2.4.34",
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "@types/styled-components": "^5.1.14",
     "apexcharts": "^3.29.0",
@@ -46,6 +48,7 @@
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
+    "@equinor/eslint-config-fusion": "^0.1.2",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
@@ -53,12 +56,17 @@
     "@types/react-table": "^7.7.7",
     "@types/react-window": "^1.8.5",
     "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-webpack-plugin": "^3.0.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.4.1",
@@ -67,7 +75,7 @@
     "style-loader": "^3.3.0",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.5",
-    "typescript": "^4.4.3",
+    "typescript": "^4.4.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.59.0",
     "webpack-cli": "^4.8.0",
