--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,11 +23,12 @@
     ],
     "rules": {
         "prettier/prettier": [
-            "error",
+            "warn",
             {
                 "endOfLine": "crlf"
             }
         ],
+        "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-use-before-define": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-unused-vars": "error",
