First sep on implementing a 3d viewer for the project with custom actions and selectors .

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "types": ["node"],
         "sourceMap": true,
         "paths": {
+            "@equinor/ThreeDViewer": ["./src/packages/ThreeDViewer"],
             "@equinor/authentication": ["./packages/authentication"],
             "@equinor/http-client": ["./packages/httpClient"],
             "@equinor/lighthouse-core": ["./packages/core"],
