--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -6,14 +6,14 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build a Docker image
-      run: docker build /.docker/Dockerfile
+      run: docker build /.docker/Dockerfile -t "snyk"
     - name: Run Snyk to check Docker image for vulnerabilities
       continue-on-error: true
       uses: snyk/actions/docker@snyk
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TEST }}
       with:
-        image: latest
+        image: "snyk"
         args: --file=Dockerfile
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v1
