--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
         "@typescript-eslint/no-unused-vars": "error",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
+        "react/no-multi-comp": false,
         "no-undef": "off",
         "no-console": "warn",
         "no-unreachable": "warn"
