--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -14,7 +14,7 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TEST }}
       with:
         image: snyk
-        args: --file=Dockerfile
+        args: --file=.docker/Dockerfile
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v1
       with:
