--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/styled-components": "^5.1.14",
     "apexcharts": "^3.29.0",
     "comlink": "^4.3.1",
+    "dexie": "^3.0.3",
     "frappe-gantt-react": "^0.2.2",
     "install": "^0.13.0",
     "json-fn": "^1.1.1",
