--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "frappe-gantt-react": "^0.2.2",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "npm": "^8.1.3",
     "powerbi-client": "^2.18.5",
     "powerbi-client-react": "^1.3.3",
