--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@azure/app-configuration": "^1.3.0",
     "@azure/msal-browser": "^2.18.0",
+    "@cognite/reveal": "2.1.2",
+    "@cognite/sdk": "5.6.1",
     "@dbeining/react-atom": "^4.1.21",
     "@equinor/eds-core-react": "^0.14.2",
     "@equinor/eds-icons": "^0.7.0",
