--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "install": "^0.13.0",
     "json-fn": "^1.1.1",
     "lodash": "^4.17.21",
+    "luxon": "^2.1.1",
     "moment": "^2.29.1",
     "powerbi-client": "^2.18.5",
     "powerbi-client-react": "^1.3.3",
@@ -52,9 +53,8 @@
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
-    "ts-node": "^10.2.1",
-    "worker-loader": "^3.0.8",
     "@equinor/eslint-config-fusion": "^0.1.2",
+    "@types/luxon": "^2.0.7",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
@@ -68,11 +68,11 @@
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-webpack-plugin": "^3.0.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-webpack-plugin": "^3.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.4.1",
@@ -81,10 +81,12 @@
     "style-loader": "^3.3.0",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.59.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "worker-loader": "^3.0.8"
   }
 }
