--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
         // "outDir": "dist",
         "skipLibCheck": true,
         "module": "commonjs",
+        // "lib": [
+        //     "webworker",
+        //     "esnext"
+        //   ],
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "noImplicitAny": false,
