--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
         "types": ["node"],
         "sourceMap": true,
         "paths": {
-            "@equinor/StatusBar": ["./src/packages/StatusBar"],
+            "@equinor/StatusBar": ["./src/packages/2StatusBar"],
             "@equinor/Diagrams": ["./src/packages/Diagrams"],
             "@equinor/ThreeDViewer": ["./src/packages/ThreeDViewer"],
             "@equinor/authentication": ["./packages/authentication"],
