--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,16 @@
         "target": "es6",
         "outDir": "dist",
         "skipLibCheck": true,
-        "module": "commonjs",
-        "esModuleInterop": true,
+        "module": "es6",
+        "moduleResolution": "node",
+        "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
         "noImplicitAny": false,
-        "types": ["node"],
+        "types": ["node", "vite/client"],
         "sourceMap": true,
         "paths": {
             "@equinor/StatusBar": ["./src/packages/2StatusBar"],
