--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "vitebuild": "vite build",
+    "start": "vite",
+    "build": "vite build",
     "serve": "vite serve",
-    "start": "webpack serve --mode development --env development --open --hot",
-    "build": "webpack",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
     "lint-fix": "eslint --ext .js,.jsx,.ts,.tsx src --color --fix",
     "lint-strict": "eslint --ext .js,.jsx,.ts,.tsx src --color --max-warnings=0",
@@ -84,6 +82,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.4.1",
+    "rollup-plugin-copy": "^3.4.0",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
