--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -7,7 +7,7 @@ COPY . /app
 
 # Build 
 RUN yarn install
-RUN yarn build --mode=production
+RUN yarn build 
 
 # production environment
 FROM nginx:stable-alpine
@@ -17,7 +17,7 @@ FROM nginx:stable-alpine
 
 
 ## add permissions for nginx user
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 
 ## Cooy Nginx
 COPY .docker/nginx/ /etc/nginx/
