--- a/pipelines/frontend-build.yml
+++ b/pipelines/frontend-build.yml
@@ -11,6 +11,7 @@ resources:
           type: github
           name: equinor/lighthouse-infra
           endpoint: 'equinor'
+          ref: infra/move
 
 # Global variables for the pipeline
 variables:
@@ -49,7 +50,7 @@ stages:
     - stage: dev
       displayName: 'Deploy to dev'
       dependsOn: 'build'
-      condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/dev'))
+      condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/dev'))
       variables:
           envName: 'dev'
           envLabel: 'non-prod'
@@ -70,5 +71,6 @@ stages:
                 repository: '${{ variables.repositoryName }}'
                 containerRegistry: '${{ variables.containerRegistry }}'
                 appName: '$(appName)'
+                appConfigName: '${{ variables.appConfigName }}'
 
 
