Added data factroy to register dataViwer and test to Loop test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "types": ["node", "vite/client"],
         "sourceMap": true,
         "paths": {
+            "@equinor/DataFactory": ["./src/Core/DataFactory"],
             "@equinor/StatusBar": ["./src/packages/2StatusBar"],
             "@equinor/Diagrams": ["./src/packages/Diagrams"],
             "@equinor/ThreeDViewer": ["./src/packages/ThreeDViewer"],
