Add Config Path

--- a/pipelines/frontend-build.yml
+++ b/pipelines/frontend-build.yml
@@ -72,5 +72,4 @@ stages:
                 containerRegistry: '${{ variables.containerRegistry }}'
                 appName: '$(appName)'
                 appConfigName: '${{ variables.appConfigName }}'
-
-
+                configPath: '/src/resources/web-client/config/appConfig-${{ variables.envName }}.json@templates'
