--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
             "@equinor/StatusBar": ["./src/packages/2StatusBar"],
             "@equinor/Diagrams": ["./src/packages/Diagrams"],
             "@equinor/ThreeDViewer": ["./src/packages/ThreeDViewer"],
+            "@equinor/Table": ["./src/packages/Table"],
             "@equinor/authentication": ["./packages/authentication"],
             "@equinor/http-client": ["./packages/httpClient"],
             "@equinor/lighthouse-core": ["./packages/core"],
@@ -27,7 +28,7 @@
             "@equinor/lighthouse-components": ["./packages/components"],
             "@equinor/lighthouse-conf": ["./packages/configuration"],
             "@equinor/lighthouse-util": ["./packages/util"],
-            "@equinor/lighthouse-typeGuard": ["./packages/typeGuard"]
+            "@equinor/lighthouse-typeGuard": ["./packages/typeGuard"],
         }
     },
     "compileOnSave": true,
