--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         "react/function-component-definition": 0,
         "no-undef": "off",
         "no-console": "warn",
-        "no-unreachable": "warn"
+        "no-unreachable": "warn",
+        "@typescript-eslint/no-empty-interface": "off"
     }
 }
