--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
+    "react-sortablejs": "^6.0.0",
     "react-table": "^7.7.0",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.6",
+    "sortablejs": "^1.14.0",
     "styled-components": "^5.3.3",
     "ts-node": "^10.2.1",
     "typesafe-actions": "^5.1.0",
