--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "worker-plugin": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.5",
     "@equinor/eslint-config-fusion": "^0.1.2",
+    "@types/jest": "^27.4.0",
     "@types/luxon": "^2.0.7",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.20",
@@ -83,6 +85,7 @@
     "eslint-webpack-plugin": "^3.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.4.5",
     "prettier": "^2.4.1",
     "rollup-plugin-copy": "^3.4.0",
     "sass": "^1.43.2",
