--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
         "types": ["node", "vite/client"],
         "sourceMap": true,
         "paths": {
+            "@equinor/form": ["./src/packages/Form"],
+            "@equinor/VisualEditor": ["./src/packages/VisualEditor"],
             "@equinor/worker": ["./src/packages/WebWorkers"],
             "@equinor/filter": ["./src/packages/Filter"],
             "@equinor/DataFactory": ["./src/Core/DataFactory"],
