--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.4",
     "react-router-dom": "^6.0.2",
     "react-sortablejs": "^6.0.0",
     "react-table": "^7.7.0",
