--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.4",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.0.2",
     "react-sortablejs": "^6.0.0",
     "react-table": "^7.7.0",
