--- a/package.json
+++ b/package.json
@@ -40,12 +40,16 @@
     "powerbi-client": "^2.18.5",
     "powerbi-client-react": "^1.3.3",
     "powerbi-report-authoring": "^1.1.1",
+    "prop-types": "^15.7.2",
     "re-resizable": "^6.9.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.5.1",
     "react-query": "^3.34.4",
     "react-router-dom": "^6.0.2",
+    "react-select": "^5.2.1",
+    "react-select-search": "^3.0.9",
     "react-sortablejs": "^6.0.0",
     "react-table": "^7.7.0",
     "react-virtualized-auto-sizer": "^1.0.6",
