--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@microsoft/microsoft-graph-types": "^2.7.0",
     "apexcharts": "^3.29.0",
     "comlink": "^4.3.1",
+    "crypto-js": "^4.1.1",
     "dexie": "^3.2.0",
     "install": "^0.13.0",
     "json-fn": "^1.1.1",
