--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,5 +1,6 @@
 # build environment
 FROM node:16.10.0 as build
+ARG env
 
 # Copy App
 WORKDIR /app
@@ -7,7 +8,7 @@ COPY . /app
 
 # Build 
 RUN yarn install
-RUN yarn build 
+RUN yarn build --mode ${env}
 
 # production environment
 FROM nginx:stable-alpine
