--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "vite",
+    "start": "vite --mode dev",
     "build": "tsc && vite build",
     "serve": "vite preview",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
@@ -32,6 +32,7 @@
     "apexcharts": "^3.29.0",
     "comlink": "^4.3.1",
     "dexie": "^3.2.0",
+    "dotenv": "^11.0.0",
     "install": "^0.13.0",
     "json-fn": "^1.1.1",
     "lodash": "^4.17.21",
