--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "target": "es6",
         "outDir": "dist",
         "skipLibCheck": true,
-        "module": "es6",
+        "module": "esnext",
         "moduleResolution": "node",
         "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
