--- a/pipelines/frontend-build.yml
+++ b/pipelines/frontend-build.yml
@@ -11,7 +11,7 @@ resources:
           type: github
           name: equinor/lighthouse-infra
           endpoint: 'equinor'
-          ref: infra/scope
+          ref: infra/move
 
 # Global variables for the pipeline
 variables:
