--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,7 +1,7 @@
 # build environment
 FROM node:16.10.0 as build
 
-# ARG env=dev
+ARG env=dev
 
 # Copy App
 WORKDIR /app
@@ -9,7 +9,7 @@ COPY . /app
 
 # Build 
 RUN yarn install
-RUN yarn build 
+RUN yarn build --mode ${env}
 
 # production environment
 FROM nginx:stable-alpine
